<resources>
    <string name="app_name">BILLK MOTOLINK LTD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BILLK MOTOLINK LTD</string>
    <string name="nav_header_subtitle">billkmotolinkltd@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Under Maintenance</string>
    <string name="menu_home">Home</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_clockouts">Clock Out</string>
    <string name="menu_user">User Management</string>
    <string name="menu_bike">Batteries</string>
    <string name="menu_approvals">Income, Budgets &amp; Trails</string>
    <string name="menu_hr">Human Resource</string>
    <string name="menu_incidents">Incidences &amp; Accidents</string>
    <string name="menu_dailyreports">Daily Reports</string>
    <string name="menu_weeklyreports">Weekly Reports</string>
    <string name="menu_data">Data Visualization</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_login">Log In</string>
    <string name="menu_space" />
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="app_logo">App Logo</string>
    <string name="fetching_location_and_weather">Fetching location and weather…</string>
    <string name="fetching_weather_data">Fetching weather data…</string>
    <string name="c_w">Hello,</string>
    <string name="unpushed_amount">Unpushed Amount</string>
    <string name="zero_amount">Ksh 0.00</string>
    <string name="money_image">TODO</string>
    <string name="pending_amount">Pending Amount:</string>
    <string name="hello">Hello</string>
    <string name="gross_income">Gross Income</string>
    <string name="gross_income_">Gross Income:</string>
    <string name="gross_income_broken">Gross\nIncome</string>
    <string name="enter_gross_income">Enter Gross Income</string>
    <string name="enter_commission">Commission Constant</string>
    <string name="current_in_app_balance">Current In-App Balance</string>
    <string name="today_s_in_app_balance">Today\'s In-App Balance</string>
    <string name="select_expenses">Select Expenses</string>
    <string name="previous_in_app_balance">Previous In-App Balance</string>
    <string name="choose_expenses">Expenses</string>
    <string name="add_expenses">Expense</string>
    <string name="submit">Submit</string>
    <string name="battery_swap">Battery Swap</string>
    <string name="lunch">Lunch</string>
    <string name="police">Police</string>
    <string name="other">Other</string>
    <string name="enter_other_expense">Enter Other Expense</string>
    <string name="select_report_type">Select Report Type</string>
    <string name="incidence_reports">Incidence Reports</string>
    <string name="ran_out_of_charge">Ran out of charge</string>
    <string name="bike_randomly_shut_down">Bike randomly shut down</string>
    <string name="bike_unexpectedly_locked">Bike unexpectedly locked</string>
    <string name="a_bike_part_fell_off">A bike part fell off</string>
    <string name="overspeeding">Overspeeding</string>
    <string name="involved_in_an_accident">Involved in an accident</string>
    <string name="road_signs_amp_traffic_rule_violation"><![CDATA[Road signs & traffic rule violation]]></string>
    <string name="road_misbehavior">Road misbehavior</string>
    <string name="hit_a_police_officer">Hit a police officer</string>
    <string name="lacking_faulty_bike_part_s">Lacking/faulty bike part(s)</string>
    <string name="insufficient_unavailable_invalid_documents">Insufficient/unavailable/invalid documents</string>
    <string name="illegal_on_the_run_passenger_cargo">Illegal/On-the-run passenger/cargo</string>
    <string name="hit_another_car">Hit another car</string>
    <string name="got_hit">Got hit</string>
    <string name="hit_a_pedestrian">Hit a pedestrian</string>
    <string name="involved_bike">Involved Bike</string>
    <string name="checking_authentication">Checking authentication…</string>
    <string name="create_a_new_user">Create a New User</string>
    <string name="full_name">Full Name (2)</string>
    <string name="user_mail_gmail_com">user_mail@gmail.com</string>
    <string name="_12345678">12345678</string>
    <string name="id_number">ID Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="rank">User Rank</string>
    <string name="username">Username</string>
    <string name="create_user">Create User</string>
    <string name="_0712345678">0712345678</string>
    <string name="manage_existing_users">Manage Existing Users</string>
    <string name="select_user">Select User</string>
    <string name="select_action">Select Action</string>
    <string name="engage_action">Engage Action</string>
    <string name="add_a_new_bike">Add a New Bike</string>
    <string name="plate_number">Plate Number</string>
    <string name="add_bike">Add Bike</string>
    <string name="manage_existing_bikes">Delete Existing Bikes</string>
    <string name="select_bike">Select Bike</string>
    <string name="delete_bike">Delete Bike</string>
    <string name="approval_requests">Approval Requests</string>
    <string name="write_a_new_budget">Write a new budget</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="total_ksh_0">Total: Ksh 0.00</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="processing">Processing…</string>
    <string name="you_have_clocked_out">You have clocked out</string>
    <string name="last_budget_still_pending">Pending Budget</string>
    <string name="your_previous_budget_was_approved">Your previous budget was approved but funds haven\'t been disbursed yet</string>
    <string name="your_previous_budget_was_declined">Your previous budget was declined</string>
    <string name="undisbursed_funds_for_previous_budget">Undisbursed funds for previous budget</string>
    <string name="check_with_accounts">Check with accounts!</string>
    <string name="check_with_an_administrator">Check with an administrator</string>
    <string name="report_title">Issue:</string>
    <string name="report_description">Report Description:</string>
    <string name="time">Time:</string>
    <string name="bike_info">Bike Info</string>
    <string name="delete">Delete</string>
    <string name="incidents_and_accidents_reported">Order: <i>Desc (Newest first)</i></string>
    <string name="clear_reports">Clear Reports</string>
    <string name="no_reports_yet">No reports yet.</string>
    <string name="gender">Gender</string>
    <string name="actions">Actions</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="company_income">Company Income:</string>
    <string name="variables_directly">Variables directly affecting company income</string>
    <string name="income_approved_from_riders">1. Income approved from riders <font color="#FFA500"><b>+</b></font>.</string>
    <string name="human_resource_budgets">2. Disbursed human resource budgets <font color="#FFA500"><b>-</b></font>.</string>
    <string name="ploughed_back">3. Ploughed back income to evade bankruptcy or substantiate capital <font color="#FFA500"><b>+</b></font>.</string>
    <string name="direct_withdrawals">4. Direct withdrawals from an authorised user account <font color="#FFA500"><b>-</b></font>.</string>
    <string name="record_withdraw_from_company_to_personal">Withdraw Funds from Company to Personal Account</string>
    <string name="add_to_company_account">Transfer Funds from Personal to Company Account</string>
    <string name="amount">Amount</string>
    <string name="continue_operations">Continue Operations</string>
    <string name="pause_operations">Pause Operations</string>
    <string name="company_operations_are_paused">Company is on hold.</string>
    <string name="no_data">No data</string>
    <string name="human_resource">Human Resource</string>
    <string name="there_is_no_outstanding_hr_budget">There is no outstanding HR budget</string>
    <string name="current_hr_budget">Current HR Budget</string>
    <string name="approve_budget">Approve</string>
    <string name="decline_budget">Decline</string>
    <string name="loading_weather">Checking your environment…</string>
    <string name="custom_string">%1$s</string>
    <string name="percentage">Percentage</string>
    <string name="change_commission_constant">Change Commission Constant</string>
    <string name="daily_target">Daily Target:</string>
    <string name="username_">Username: %1$s</string>
    <string name="email_">Email: %1$s</string>
    <string name="you_are_not_allowed_to_clock_out_today">You are not set to work today</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="current_commission_constant_is">Current commission constant is&#160;</string>
    <string name="_0_percent">0%</string>
    <string name="plate_no">Plate No.</string>
    <string name="battery_location">Battery Location</string>
    <string name="destination_name">Destination name</string>
    <string name="add_destination">Add Destination</string>
    <string name="battery_name">Battery Name</string>
    <string name="location">Location</string>
    <string name="add_battery">Add Battery</string>
    <string name="manage_bikes_amp_batteries"><![CDATA[Manage Bikes & Batteries]]></string>
    <string name="clock_our_from_your_shift"><u><i>Clock out of your shift.</i></u></string>
    <string name="status_changed">Status Changed</string>
    <string name="rider">Rider</string>
    <string name="bike">Bike</string>
    <string name="battery">Battery</string>
    <string name="drop_bike_and_batteries">Drop Bike and Batteries</string>
    <string name="current_location">Current Location</string>
    <string name="clock_out">Clock Out</string>
    <string name="swap_batteries">Swap Batteries</string>
    <string name="dashes">--</string>
    <string name="load">Load</string>
    <string name="offload">Offload</string>
    <string name="clock_in">Clock In</string>
    <string name="battery_s">Battery(s)</string>
    <string name="you_need_to_clock_in_first">You need to clock in first</string>
    <string name="battery_information">Battery Information</string>
    <string name="bike2">Bike:</string>
    <string name="verify_email">Verify Email</string>
    <string name="_5_digit_code">5-Digit Code</string>
    <string name="online_period">Online Period:</string>
    <string name="assigned_bike">Assigned Bike:</string>
    <string name="footprints">Footprints</string>
    <string name="clock_in_operations">Clock-In Operations</string>
    <string name="asset_management">Asset Management</string>
    <string name="cash_flows">Cash Flow Statements</string>
    <string name="require">Require</string>
    <string name="corrections">Corrections</string>
    <string name="profiles">Profiles</string>
    <string name="restoration">Restoration</string>
    <string name="memo">Memo</string>
    <string name="complain">Complain</string>
    <string name="menu_chatrooms">Chatrooms</string>
    <string name="mpesa">MPESA</string>
    <string name="complaints">Rider Complaints</string>
    <string name="create_a_poll">Create a Poll</string>
</resources>