<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_main" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/house"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/book"
            android:visible="false"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_clockins"
            android:icon="@drawable/clockins"
            android:visible="false"
            android:title="@string/clock_in_operations" />
        <item
            android:id="@+id/nav_clockouts"
            android:icon="@drawable/timer"
            android:visible="false"
            android:title="@string/menu_clockouts" />
        <item
            android:id="@+id/nav_corrections"
            android:icon="@drawable/corrections"
            android:visible="false"
            android:title="@string/corrections" />
        <item
            android:id="@+id/nav_complain"
            android:icon="@drawable/complain"
            android:visible="false"
            android:title="@string/complain" />
        <item
            android:id="@+id/nav_require"
            android:icon="@drawable/require"
            android:visible="false"
            android:title="@string/require" />
        <item
            android:id="@+id/nav_user"
            android:visible="false"
            android:icon="@drawable/portrait"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_post_memo"
            android:visible="false"
            android:icon="@drawable/memo"
            android:title="@string/memo" />
        <item
            android:id="@+id/nav_batteries"
            android:icon="@drawable/bike"
            android:visible="false"
            android:title="@string/menu_bike" />
        <item
            android:id="@+id/nav_manage_assets"
            android:icon="@drawable/scooter"
            android:visible="false"
            android:title="@string/asset_management" />
        <item
            android:id="@+id/nav_profiles"
            android:icon="@drawable/profiles"
            android:visible="false"
            android:title="@string/profiles" />
        <item
            android:id="@+id/nav_approvals"
            android:icon="@drawable/dollar"
            android:visible="false"
            android:title="@string/menu_approvals" />
        <item
            android:id="@+id/nav_cashflows"
            android:icon="@drawable/cash_flow"
            android:visible="false"
            android:title="@string/cash_flows" />
        <item
            android:id="@+id/nav_tracer"
            android:icon="@drawable/footprints"
            android:visible="false"
            android:title="@string/footprints" />
        <item
            android:id="@+id/nav_restoration"
            android:icon="@drawable/restore"
            android:visible="false"
            android:title="@string/restoration" />
        <item
            android:id="@+id/nav_hr"
            android:icon="@drawable/queue"
            android:visible="false"
            android:title="@string/menu_hr" />
        <item
            android:id="@+id/nav_incidences"
            android:icon="@drawable/direction"
            android:visible="false"
            android:title="@string/menu_incidents" />
        <item
            android:id="@+id/nav_dailyreports"
            android:icon="@drawable/dictionary"
            android:visible="false"
            android:title="@string/menu_dailyreports" />
        <item
            android:id="@+id/nav_weeklyreports"
            android:icon="@drawable/address"
            android:visible="false"
            android:title="@string/menu_weeklyreports" />
        <item
            android:id="@+id/nav_chatrooms"
            android:icon="@drawable/chatroom"
            android:visible="false"
            android:title="@string/menu_chatrooms" />
        <item
            android:id="@+id/nav_mpesa"
            android:icon="@drawable/mpesa"
            android:visible="false"
            android:title="@string/mpesa" />

    </group>
</menu>
