<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_main" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/house"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/book"
            android:visible="false"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_clockouts"
            android:icon="@drawable/clock"
            android:visible="false"
            android:title="@string/menu_clockouts" />
        <item
            android:id="@+id/nav_approvals"
            android:icon="@drawable/dollar"
            android:visible="false"
            android:title="@string/menu_approvals" />
        <item
            android:id="@+id/nav_user"
            android:visible="false"
            android:icon="@drawable/portrait"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_bike"
            android:icon="@drawable/bike"
            android:visible="false"
            android:title="@string/menu_bike" />
        <item
            android:id="@+id/nav_hr"
            android:icon="@drawable/queue"
            android:visible="false"
            android:title="@string/menu_hr" />
        <item
            android:id="@+id/nav_incidences"
            android:icon="@drawable/direction"
            android:visible="false"
            android:title="@string/menu_incidents" />
        <item
            android:id="@+id/nav_dailyreports"
            android:icon="@drawable/dictionary"
            android:visible="false"
            android:title="@string/menu_dailyreports" />
        <item
            android:id="@+id/nav_weeklyreports"
            android:icon="@drawable/address"
            android:visible="false"
            android:title="@string/menu_weeklyreports" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/curve"
            android:visible="false"
            android:title="@string/menu_data" />
    </group>

    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/power"
            android:title="@string/menu_logout" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login"
            android:title="@string/menu_login" />

    </group>
</menu>