<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reports.ReportsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/text_reports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incidence_reports"
                android:textSize="25sp"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"/>

<!--            report type-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_report_type"
                    android:textSize="18sp"
                    android:layout_marginEnd="15dp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold"/>
                <Spinner
                    android:id="@+id/reportType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

            <!-- Layout for Option 1 -->
            <RadioGroup
                android:id="@+id/layoutOption1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/mb1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/ran_out_of_charge" />

                <RadioButton
                    android:id="@+id/mb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/bike_randomly_shut_down" />
                <RadioButton
                    android:id="@+id/mb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/bike_unexpectedly_locked" />
                <RadioButton
                    android:id="@+id/mb4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/a_bike_part_fell_off" />
            </RadioGroup>

            <!-- Layout for Option 2 -->
            <RadioGroup
                android:id="@+id/layoutOption2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/pa1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/overspeeding" />

                <RadioButton
                    android:id="@+id/pa2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/involved_in_an_accident" />
                <RadioButton
                    android:id="@+id/pa3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/road_signs_amp_traffic_rule_violation" />
                <RadioButton
                    android:id="@+id/pa4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/road_misbehavior" />
                <RadioButton
                    android:id="@+id/pa5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/hit_a_police_officer" />
                <RadioButton
                    android:id="@+id/pa6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/lacking_faulty_bike_part_s" />
                <RadioButton
                    android:id="@+id/pa7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/insufficient_unavailable_invalid_documents" />
                <RadioButton
                    android:id="@+id/pa8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/illegal_on_the_run_passenger_cargo" />
            </RadioGroup>

            <!-- Layout for Option 3 -->
            <RadioGroup
            android:id="@+id/layoutOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/ra1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/hit_another_car" />

            <RadioButton
                android:id="@+id/ra2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/got_hit" />
            <RadioButton
                android:id="@+id/ra3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/hit_a_pedestrian" />
        </RadioGroup>

<!--            involved bike-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/involved_bike"
                    android:textSize="18sp"
                    android:layout_marginEnd="15dp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold"/>
                <Spinner
                    android:id="@+id/involvedBike"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <!-- Submit Button -->
            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:visibility="gone"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:textColor="@android:color/white"
                android:padding="12dp"
                android:layout_marginTop="12dp"/>
            <Button
                android:id="@+id/btnOperationsPaused"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_operations_are_paused"
                android:visibility="gone"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:padding="12dp"
                android:enabled="false"
                android:layout_marginTop="12dp"/>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>